; ModuleID = '/home/carl/AnghaBench/toxcore/testing/extr_nTox.c_write_file.c'
source_filename = "/home/carl/AnghaBench/toxcore/testing/extr_nTox.c_write_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"[t] %u file transfer: %u completed\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"%u.%u.bin\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"r+b\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@SEEK_SET = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [22 x i8] c"Error writing to file\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_file(i32* %0, i32 %1, i32 %2, i32 %3, i32* %4, i64 %5, i8* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca [512 x i8], align 16
  %16 = alloca [256 x i8], align 16
  %17 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i64 %5, i64* %13, align 8
  store i8* %6, i8** %14, align 8
  %18 = load i64, i64* %13, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %27

20:                                               ; preds = %7
  %21 = getelementptr inbounds [512 x i8], [512 x i8]* %15, i64 0, i64 0
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @sprintf(i8* %21, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %22, i32 %23)
  %25 = getelementptr inbounds [512 x i8], [512 x i8]* %15, i64 0, i64 0
  %26 = call i32 @new_lines(i8* %25)
  br label %54

27:                                               ; preds = %7
  %28 = getelementptr inbounds [256 x i8], [256 x i8]* %16, i64 0, i64 0
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %10, align 4
  %31 = call i32 @sprintf(i8* %28, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %29, i32 %30)
  %32 = getelementptr inbounds [256 x i8], [256 x i8]* %16, i64 0, i64 0
  %33 = call i32* @fopen(i8* %32, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  store i32* %33, i32** %17, align 8
  %34 = load i32*, i32** %17, align 8
  %35 = icmp eq i32* %34, null
  br i1 %35, label %36, label %39

36:                                               ; preds = %27
  %37 = getelementptr inbounds [256 x i8], [256 x i8]* %16, i64 0, i64 0
  %38 = call i32* @fopen(i8* %37, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0))
  store i32* %38, i32** %17, align 8
  br label %39

39:                                               ; preds = %36, %27
  %40 = load i32*, i32** %17, align 8
  %41 = load i32, i32* %11, align 4
  %42 = load i32, i32* @SEEK_SET, align 4
  %43 = call i32 @fseek(i32* %40, i32 %41, i32 %42)
  %44 = load i32*, i32** %12, align 8
  %45 = load i64, i64* %13, align 8
  %46 = load i32*, i32** %17, align 8
  %47 = call i32 @fwrite(i32* %44, i64 %45, i32 1, i32* %46)
  %48 = icmp ne i32 %47, 1
  br i1 %48, label %49, label %51

49:                                               ; preds = %39
  %50 = call i32 @new_lines(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.4, i64 0, i64 0))
  br label %51

51:                                               ; preds = %49, %39
  %52 = load i32*, i32** %17, align 8
  %53 = call i32 @fclose(i32* %52)
  br label %54

54:                                               ; preds = %51, %20
  ret void
}

declare dso_local i32 @sprintf(i8*, i8*, i32, i32) #1

declare dso_local i32 @new_lines(i8*) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fseek(i32*, i32, i32) #1

declare dso_local i32 @fwrite(i32*, i64, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
